Fix some CSS layout issues

--- a/src/components/activation.module.css
+++ b/src/components/activation.module.css
@@ -15,7 +15,7 @@
     padding: 12px;
 }
 
-.blue-oval {
+.white-oval {
     height: 160px;
     width: calc(100vw*1.25);
     background-color: white;
