--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -22,6 +22,10 @@ title {
     padding-top: 70px;
 }
 
+.body {
+    max-width: 100%;
+    overflow: hidden;
+}
 .featureText {
     padding-left: 40px;
     padding-right: 40px;
