--- a/src/pages/contact.module.css
+++ b/src/pages/contact.module.css
@@ -1,23 +1,39 @@
 .beigeShape {
     position: absolute;
-    bottom: calc(-100vh/1.1);
-    right: calc(-100vh/1.0);
-    height: calc(100vh*1.6);
-    width: calc(100vh*1.6);
+    bottom: -850px;
+    right: -600px;
+    height: 1200px;
+    width: 1200px;
+    /* bottom: calc(-100vh/1.1); */
+    /* right: calc(-100vh/0.7); */
+    /* height: calc(100vh*1.6); */
+    /* width: calc(100vh*1.6); */
     border-radius: 100%;
     background-color: #F4F3F0;
     z-index: -1;
+    /* overflow: hidden; */
 }
 
+/* try sticky */
 .sandShape {
-    position: absolute;
-    bottom: calc(-100vh/1);
-    right: calc(-100vh/1.3);
-    height: calc(100vh*1.6);
-    width: calc(100vh*1.6);
+    position: absolute; 
+    /* bottom: calc(-100vh/1); */
+    /* right: calc(-100vh/1.1); */
+    /* height: calc(100vh*1.6); */
+    /* width: calc(100vh*1.6); */
+    bottom: -500px;
+    right: -650px;
+    height: 1000px;
+    width: 1000px;
     border-radius: 100%;
     background-color: #DDD1C5;
     z-index: -2;
+    /* overflow: hidden; */
+}
+
+.container {
+    position: relative;
+    overflow: hidden;
 }
 
 /* MEDIUM AND LARGE SCREENS */
